--- a/resources/assets/sass/categories.scss
+++ b/resources/assets/sass/categories.scss
@@ -30,20 +30,15 @@
       }
     }
 
-    .background-2 {
-      background-color: rgba(0, 0, 0, 0.9);
-      img {
-        opacity: 0.1;
-      }
-    }
+    .hover-action {
 
-    .centred {
-      @include text-position(150px, 30px, $bootstrap-xs);
-      @include text-position(150px, 30px, $bootstrap-sm);
+      img {
+        width: 100%;
+      }
 
       p {
         font-family: $font-R-black;
-        color:  $bg-text-color-1;
+        color: $bg-text-color-1;
         font-size: 1.125em;
         font-weight: 900;
         line-height: 24.056px;
@@ -52,60 +47,107 @@
         margin: 0;
       }
 
-      span {
-        font-family: $font-R-regular;
-        color: $bg-text-color-1;
-        font-size: 0.75em;
-        font-weight: 400;
-        line-height: 10px;
-        transform: scaleY(1.0033);
-      }
-
-      .font-sz {
-        font-size: 30px;
-      }
-
       hr {
         border: none;
         background-color: $bg-text-color-2;
         width: 70%;
         height: 2px;
-      }
-
-      .width {
-        width: 40%;
-        margin-top: 10px;
+        margin-top: 5px;
         margin-bottom: 10px;
       }
-    }
 
-    .stationery-block {
+      .centred {
+        @include text-position(150px, 30px, $bootstrap-xs);
+        @include text-position(150px, 30px, $bootstrap-sm);
 
-      text-align: center;
-      @include text-position(150px, 150px, $bootstrap-xs);
-      @include text-position(150px, 150px, $bootstrap-sm);
 
-      .stationery-btn {
-        background-color:  $bg-text-color-2;
-        width: 108px;
-        height: 26px;
-        border: none;
-        border-radius: 50px;
-        font-family: $font-R-black;
-        color:  $bg-text-color-1;
-        font-size: 0.750em;
-        font-weight: 900;
-        line-height: 10px;
+        .font-sz {
+          font-size: 30px;
+        }
+
+
+        .width {
+          width: 40%;
+          margin-top: 10px;
+          margin-bottom: 10px;
+        }
+      }
+
+      .stationery-block {
         text-align: center;
-        transform: scaleY(1.0231);
-        margin-top: 15px;
-        display: block;
+        @include text-position(150px, 30px, $bootstrap-xs);
+        @include text-position(150px, 30px, $bootstrap-sm);
+      }
+
+      .holder {
+        display: none;
+        text-align: center;
+        position: absolute;
+        top: 0;
+        left: 0;
+        right: 0;
+        bottom: 0;
+        .block {
+          @include text-position(150px, 150px, $bootstrap-xs);
+          @include text-position(150px, 150px, $bootstrap-sm);
+
+          a:focus, a:hover {
+            text-decoration: none;
+          }
+
+          .stationery-btn {
+            background-color: $bg-text-color-2;
+            width: 108px;
+            height: 26px;
+            border: none;
+            border-radius: 50px;
+            font-family: $font-R-black;
+            color: $bg-text-color-1;
+            font-size: 0.750em;
+            font-weight: 900;
+            line-height: 10px;
+            text-align: center;
+            transform: scaleY(1.0231);
+            margin-top: 15px;
+            display: block;
+            -webkit-box-shadow: none;
+            -moz-box-shadow: none;
+            box-shadow: none;
+            outline: none;
+          }
+
+          span {
+            font-family: $font-R-regular;
+            color: $bg-text-color-1;
+            font-size: 0.75em;
+            font-weight: 400;
+            line-height: 10px;
+            transform: scaleY(1.0033);
+          }
+        }
       }
     }
 
-    img {
-      width: 100%;
+    .hover-action:hover{
+
+
+      .hover-text {
+        opacity: 1;
+      }
+
+      .no-hover-text {
+        opacity: 0;
+      }
+      .holder {
+        background-color: rgba(0, 0, 0, 0.9);
+        display: block;
+        opacity: 0.9;
     }
 
+      img {
+        opacity: 0.3;
+      }
+    }
   }
 }
+
