--- a/resources/assets/sass/first-screen.scss
+++ b/resources/assets/sass/first-screen.scss
@@ -3,8 +3,15 @@
 
   .logo {
     left: 50%;
+    opacity: 0;
 
-    @include content-position(110px, 11vh, $bootstrap-xs);
+    @media #{$bootstrap-xs} {
+      position: fixed;
+      width: 110px;
+      top: 11vh;
+      margin-left: - (110px / 2);
+    }
+
     @include content-position(190px, 13vh, $bootstrap-sm);
     @include content-position(270px, 10vh, $bootstrap-xl);
 
@@ -28,6 +35,12 @@
     }
 
   }
+
+  .logo.affix {
+    top:0;
+    opacity: 0!important;
+  }
+
   .houses {
     position: absolute;
     left: 0;
@@ -36,37 +49,32 @@
     width: 100%;
   }
   .first-cloud {
-    position: fixed;
-    top:12%;
-    left:-5%;
+    position: absolute;
+    top:19%;
+    left:3%;
     width: 6%;
-    opacity: 0;
   }
   .second-cloud {
-    position: fixed;
-    top: 6%;
-    left: 15%;
+    position: absolute;
+    top: 10%;
+    left: 24%;
     width: 6%;
-    opacity: 0;
   }
   .third-cloud {
-    position: fixed;
-    left: 48%;
-    top: 2%;
-    opacity: 0;
+    position: absolute;
+    left: 52.5%;
+    top: 7%;
   }
   .fourth-cloud {
-    position: fixed;
-    right: 10%;
-    top: 6%;
-    width: 7.5%;
-    opacity: 0;
+    position: absolute;
+    right: 18%;
+    top: 10%;
+    width: 7.1%;
   }
   .fifth-cloud {
-    position: fixed;
-    right: -2%;
-    top:17%;
+    position: absolute;
+    right: 3%;
+    top:19%;
     width: 6%;
-    opacity: 0;
   }
 }
