--- a/resources/assets/sass/landing.scss
+++ b/resources/assets/sass/landing.scss
@@ -1,27 +1,19 @@
 .content {
+  margin-bottom: 70px;
 
   @media #{$bootstrap-xs} {
     margin-top: -55vh;
     .content-width {
-      width: 76%;
+      width: 75%;
     }
   }
 
   @media #{$bootstrap-sm} {
     margin-top: -90vh;
     .content-width {
-      width: 76%;
-      max-width: 1175px;
+      width: 75%;
     }
   }
-
-  @media #{$bootstrap-xl} {
-    .content-width {
-      max-width: 1175px;
-    }
-  }
-
-  margin-bottom: 70px;
 
   .first-block {
     background-color: $bg-text-color-1;
@@ -63,6 +55,11 @@
       text-align: center;
       transform: scaleX(1.0001);
       margin-bottom: 70px;
+      -webkit-box-shadow: none;
+      -moz-box-shadow: none;
+      box-shadow: none;
+      outline: none;
+      border: none;
     }
   }
   .second-block {
@@ -75,7 +72,7 @@
       font-weight: 900;
       line-height: 36px;
       text-align: center;
-      margin-top: 70px;
+      margin: 70px 0 60px 0;
     }
     p {
 
@@ -91,13 +88,12 @@
       }
 
       @media #{$bootstrap-sm} {
-        margin: 60px 0 70px 0;
+        margin-bottom: 70px;
         text-align: left;
       }
     }
 
     .video {
-      margin-top: 60px;
       border-radius: 10px;
       width: 100%;
       height: 23vh;
@@ -119,6 +115,12 @@
       text-align: center;
       transform: scaleX(1.0001);
       margin-bottom: 70px;
+      margin-top: 70px;
+      -webkit-box-shadow: none;
+      -moz-box-shadow: none;
+      box-shadow: none;
+      outline: none;
+      border: none;
     }
   }
 
@@ -150,6 +152,8 @@
       text-align: center;
       img {
         margin-bottom: 70px;
+        width: 100%;
+        max-width: 170px;
       }
     }
 
@@ -166,6 +170,11 @@
       text-align: center;
       transform: scaleX(1.0001);
       margin-bottom: 70px;
+      -webkit-box-shadow: none;
+      -moz-box-shadow: none;
+      box-shadow: none;
+      outline: none;
+      border: none;
     }
   }
 
