--- a/resources/assets/sass/navbar.scss
+++ b/resources/assets/sass/navbar.scss
@@ -1,12 +1,19 @@
 .full-navbar {
+
+  .right-nav {
+    margin: 0;
+  }
   text-align: center;
+
   @media #{$bootstrap-xs} {
     position: fixed;
     top: 13vh;
     z-index: 100;
   }
+
   @media #{$bootstrap-sm} {
     margin-top: 12vh;
+    position: relative;
   }
 
   .rainbow {
@@ -16,16 +23,16 @@
       width: 65%;
     }
     @media #{$bootstrap-sm} {
-      width: 120vh;
+      width: 71%;
     }
     @media #{$bootstrap-md} {
-      width: 120vh;
+      width: 70%;
     }
     @media #{$bootstrap-lg} {
-      width: 125vh;
+      width: 68%;
     }
     @media #{$bootstrap-xl} {
-      width: 120vh;
+      width: 65%;
     }
 
   }
@@ -36,13 +43,12 @@
     background-color:  $bg-text-color-1;
     height: 60px;
     z-index: 2;
-    width: 76%;
-    max-width: 1175px;
+    width: 75%;
 
     .my-navbar {
 
       @media #{$bootstrap-xs} {
-        width: auto;
+        //width: auto;
         .mobile-nav {
           background-color: $bg-text-color-2;
           margin-bottom: 14px;
@@ -60,35 +66,48 @@
 
       @media #{$bootstrap-sm} {
         width: auto;
-
       }
     }
 
-
     .navbar-nav {
-      .my-menu {
-        box-shadow: 0 0 19px 0 rgba(46, 40, 38, 0.3);
-        border-radius: 10px;
-        background-color:  $bg-text-color-1;
-        width: 200px;
-        height: 281px;
-        border: none;
 
-        a {
-          font-family: $font-R-black;
-          color:  $bg-text-color-2;
-          font-size: 0.688em;
-          font-weight: 900;
-          line-height: 20px;
-          text-align: left;
-          text-transform: uppercase;
-          margin-bottom: 14px;
+      .main-page:hover .my-menu{
+        display: block;
+      }
+      .main-page {
+        li a:hover{
+          background-color: #ffffff;
+          color: #ff6a21;
         }
 
         li {
-          margin: 0;
+          width: 90%;
+        }
+        .my-menu {
+          box-shadow: 0 0 19px 0 rgba(46, 40, 38, 0.3);
+          border-radius: 10px;
+          background-color: $bg-text-color-1;
+          width: 200px;
+          height: 281px;
+          border: none;
+
+          a {
+            font-family: $font-R-black;
+            color: $bg-text-color-2;
+            font-size: 0.688em;
+            font-weight: 900;
+            line-height: 20px;
+            text-align: left;
+            text-transform: uppercase;
+            margin-bottom: 14px;
+          }
+
+          li {
+            margin-left: 5px;
+          }
         }
       }
+
       li {
         @media #{$bootstrap-md} {
           margin: 0 15px 0 15px;
@@ -111,13 +130,37 @@
           text-transform: uppercase;
           line-height: 30px;
         }
-        .orange-btn {
-          color: #ff6a21;
-        }
-        .position-cn {
-          padding-right: 33px;
-        }
       }
+      li a:hover{
+        background-color: #ffffff;
+        color: #ff6a21;
+      }
+
     }
+  }
+  @media  #{$bootstrap-xs}{
+    #nav1.affix {
+      position: fixed;
+      top: 0;
+      width: 100%;
+      border: none;
+      border-radius: 0;
+    }
+
+    #rain.affix {
+      top: 0;
+    }
+
+  }
+  @media  #{$bootstrap-sm}{
+    #nav1 {
+      position: relative;
+    }
+
+    #rain.affix {
+      position: static;
+
+    }
+
   }
 }
