--- a/resources/assets/sass/footer.scss
+++ b/resources/assets/sass/footer.scss
@@ -62,7 +62,9 @@
       display: inline-block;
       float: left;
       margin-left: 5%;
+      max-width: 300px;
     }
+
   }
   .right-block {
 
