--- a/resources/assets/sass/app.scss
+++ b/resources/assets/sass/app.scss
@@ -23,6 +23,7 @@ $text-color-1: #4f5e69;
 
 body {
   background-color: rgb(182, 204, 255);
+  font-size: 16px;
 }
 @import "preloader";
 @import "popup";
