--- a/public/css/app.css
+++ b/public/css/app.css
@@ -517,10 +517,7 @@ body {
         font-family: "Roboto-Regular";
         font-size: 1em;
         font-weight: 400;
-        line-height: 24px;
-        text-align: center;
-        padding: 0 10% 0 10%;
-        margin: 60px 0 70px 0; }
+        line-height: 24px; }
       .content .content-width .read-all-btn {
         width: 170px;
         height: 40px;
